logging og refaktorering, fjernet unødvendig endepunkt, oppdatert readme og docs
