# src/main/kotlin/no/nav/paw/arbeidssokerregisteret/api/routes/ArbeidssokerRoutes.kt
@@ -11,9 +11,9 @@ import no.nav.paw.arbeidssokerregisteret.api.domain.Identitetsnummer
 import no.nav.paw.arbeidssokerregisteret.api.domain.request.ArbeidssoekerperiodeRequest
 import no.nav.paw.arbeidssokerregisteret.api.domain.request.OpplysningerOmArbeidssoekerRequest
 import no.nav.paw.arbeidssokerregisteret.api.domain.request.ProfileringRequest
+import no.nav.paw.arbeidssokerregisteret.api.services.ArbeidssoekerperiodeService
 import no.nav.paw.arbeidssokerregisteret.api.services.AutorisasjonService
 import no.nav.paw.arbeidssokerregisteret.api.services.OpplysningerOmArbeidssoekerService
-import no.nav.paw.arbeidssokerregisteret.api.services.PeriodeService
 import no.nav.paw.arbeidssokerregisteret.api.services.ProfileringService
 import no.nav.paw.arbeidssokerregisteret.api.utils.getNavAnsattFromToken
 import no.nav.paw.arbeidssokerregisteret.api.utils.getPidClaim
@@ -22,7 +22,7 @@ import java.util.UUID
 
 fun Route.arbeidssokerRoutes(
     autorisasjonService: AutorisasjonService,
-    periodeService: PeriodeService,
+    arbeidssoekerperiodeService: ArbeidssoekerperiodeService,
     opplysningerOmArbeidssoekerService: OpplysningerOmArbeidssoekerService,
     profileringService: ProfileringService
 ) {
@@ -34,7 +34,7 @@ fun Route.arbeidssokerRoutes(
 
                     val foedselsnummer = call.getPidClaim()
 
-                    val arbeidssoekerperioder = periodeService.hentPerioder(foedselsnummer)
+                    val arbeidssoekerperioder = arbeidssoekerperiodeService.hentArbeidssoekerperioder(foedselsnummer)
 
                     logger.info("Hentet arbeidssøkerperioder for bruker")
 
@@ -67,34 +67,28 @@ fun Route.arbeidssokerRoutes(
                     call.respond(HttpStatusCode.OK, profilering)
                 }
             }
-            route("/profilering/opplysninger-om-arbeidssoeker/{opplysningerOmArbeidssoekerId}") {
-                get {
-                    val opplysningerOmArbeidssoekerId = UUID.fromString(call.parameters["opplysningerOmArbeidssoekerId"])
-
-                    logger.info("Henter profilering for bruker med opplysningerOmArbeidssoekerId: $opplysningerOmArbeidssoekerId")
-
-                    val profilering = profileringService.hentProfileringForArbeidssoekerMedOpplysningerOmArbeidssoekerId(opplysningerOmArbeidssoekerId)
-
-                    logger.info("Hentet profilering for bruker med opplysningerOmArbeidssoekerId: $opplysningerOmArbeidssoekerId")
-
-                    call.respond(HttpStatusCode.OK, profilering)
-                }
-            }
         }
         authenticate("azure") {
             route("/veileder/arbeidssoekerperioder") {
                 post {
-                    val (identitesnummer) = call.receive<ArbeidssoekerperiodeRequest>()
+                    logger.info("Veileder henter arbeidssøkerperioder for bruker")
 
+                    val (identitesnummer) = call.receive<ArbeidssoekerperiodeRequest>()
                     val navAnsatt = call.getNavAnsattFromToken()
+
+                    logger.info("Sjekker om NAV-ansatt har tilgang til bruker")
 
                     val harNavAnsattTilgangTilBruker = autorisasjonService.verifiserTilgangTilBruker(navAnsatt, Identitetsnummer(identitesnummer))
 
                     if (!harNavAnsattTilgangTilBruker) {
+                        logger.warn("NAV-ansatt har ikke tilgang til bruker")
                         return@post call.respond(HttpStatusCode.Forbidden)
                     }
 
-                    val arbeidssoekerperioder = periodeService.hentPerioder(Identitetsnummer(identitesnummer))
+                    val arbeidssoekerperioder = arbeidssoekerperiodeService.hentArbeidssoekerperioder(Identitetsnummer(identitesnummer))
+
+                    logger.info("Veileder hentet arbeidssøkerperioder for bruker")
+
                     call.respond(HttpStatusCode.OK, arbeidssoekerperioder)
                 }
             }
@@ -102,15 +96,22 @@ fun Route.arbeidssokerRoutes(
                 post {
                     val (identitetsnummer, periodeId) = call.receive<OpplysningerOmArbeidssoekerRequest>()
 
+                    logger.info("Veileder henter opplysninger-om-arbeidssøker for bruker med periodeId: $periodeId")
+
                     val navAnsatt = call.getNavAnsattFromToken()
+
+                    logger.info("Sjekker om NAV-ansatt har tilgang til bruker")
 
                     val harNavAnsattTilgangTilBruker = autorisasjonService.verifiserTilgangTilBruker(navAnsatt, identitetsnummer)
 
                     if (!harNavAnsattTilgangTilBruker) {
+                        logger.warn("NAV-ansatt har ikke tilgang til bruker")
                         return@post call.respond(HttpStatusCode.Forbidden)
                     }
 
                     val opplysningerOmArbeidssoeker = opplysningerOmArbeidssoekerService.hentOpplysningerOmArbeidssoeker(periodeId)
+
+                    logger.info("Veileder hentet opplysninger-om-arbeidssøker for bruker med periodeId: $periodeId")
 
                     call.respond(HttpStatusCode.OK, opplysningerOmArbeidssoeker)
                 }
@@ -119,15 +120,22 @@ fun Route.arbeidssokerRoutes(
                 post {
                     val (identitetsnummer, periodeId) = call.receive<ProfileringRequest>()
 
+                    logger.info("Veileder henter profilering for bruker med periodeId: $periodeId")
+
                     val navAnsatt = call.getNavAnsattFromToken()
+
+                    logger.info("Sjekker om NAV-ansatt har tilgang til bruker")
 
                     val harNavAnsattTilgangTilBruker = autorisasjonService.verifiserTilgangTilBruker(navAnsatt, identitetsnummer)
 
                     if (!harNavAnsattTilgangTilBruker) {
+                        logger.warn("NAV-ansatt har ikke tilgang til bruker")
                         return@post call.respond(HttpStatusCode.Forbidden)
                     }
 
                     val profilering = profileringService.hentProfileringForArbeidssoekerMedPeriodeId(periodeId)
+
+                    logger.info("Veileder hentet profilering for bruker med periodeId: $periodeId")
 
                     call.respond(HttpStatusCode.OK, profilering)
                 }
